--- a/css/styles-specific-products-page.css
+++ b/css/styles-specific-products-page.css
@@ -68,20 +68,42 @@
 
 /************************************ SPECIFIC PRODUCTS *************************************/
 
-.description{
-	font-size: 17px;
-	color:rgb(83, 83, 83);
-}
-
-.page-label{
-	font-family: var(--ff-open-sans);
-}
-
-#specific-products-section .card{
+#products-section .card{
 	background-color: white;
+	border: none;
+	/* border: 1px solid #b9b9b9; */
+	box-shadow: 0 10px 20px 3px rgb(232, 232, 232) !important;
+	
 }
 
-.card-img-right {
-    width: 100%;
-    object-fit: fill;
+#products-section .card-body{
+	border: white;
+}
+
+/* product name */
+#products-section .card-title{
+	font-size: 25px;
+	color: black;
+}
+
+#products-section .card-title:hover{
+	color: var(--clr-signode-red);
+	cursor: pointer;
+}
+
+#products-section a:hover{
+	text-decoration: none;
+}
+
+/* product description */
+#products-section .card-text{
+	font-size: 15px;
+}
+
+#products-section img{
+	/* prevents image from stretching */
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+	border-radius: 3px 0px 0px 3px;
 }
