--- a/partials/footer.html
+++ b/partials/footer.html
@@ -121,7 +121,7 @@
         
         <div class="container">
             <!-- Signode Logo & Description -->
-            <img src="../images/partials/signode-logo.png" class="img-fluid mb-2 ml-3" alt="Signode Logo">
+            <img src="/images/partials/signode-logo.png" class="img-fluid mb-2 ml-3" alt="Signode Logo">
             <p class="ml-4">Transit Packaging Division of <a href="https://www.crowncork.com/" target="_blank" class="hyperlink" >Crown Holdings, Inc.</a> <br>Signode is a leading manufacturer of a broad spectrum of transit packaging consumables, software, and equipment.</p>
             
             <!-- Sections -->
