--- a/partials/navbar-two.html
+++ b/partials/navbar-two.html
@@ -64,7 +64,7 @@
     
                     <!-- navbar item -->
                     <li class="nav-item dropdown pr-4">
-                        <a class="nav-link dropdown-toggle" href="../industries.html" id="navbarDropdown" role="button" aria-expanded="false"> Industries </a>
+                        <a class="nav-link dropdown-toggle" href="/industries.html" id="navbarDropdown" role="button" aria-expanded="false"> Industries </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
                             <!-- dropdown menu item -->
