--- a/templates/specific-products.html
+++ b/templates/specific-products.html
@@ -13,22 +13,21 @@
 		<script src="https://kit.fontawesome.com/065b6a01b6.js" crossorigin="anonymous"></script>
 
 		<!-- external stylesheet -->
-		<link rel="stylesheet" href="css/styles-specific-products-page.css" />
+		<link rel="stylesheet" href="/css/styles-specific-products-page.css" />
 
 		<!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
 		<!-- Custom styles for this template -->
 		<link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
-		<link href="blog.css" rel="stylesheet">
 
         <title>Signode Canada</title>
 
         <script>
             $(function(){
-                $('#navbar-one').load('partials/navbar-one.html');
-                $('#navbar-two').load('partials/navbar-two.html');
-                $('#footer').load('partials/footer.html');
+                $('#navbar-one').load('/partials/navbar-one.html');
+                $('#navbar-two').load('/partials/navbar-two.html');
+                $('#footer').load('/partials/footer.html');
             });
         </script>
     </head>
@@ -56,13 +55,13 @@
 				<!-- breadcrumb -->
 				  <nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
-					  <li class="breadcrumb-item"><a href="industries.html">Industries</a></li>
-					  <li class="breadcrumb-item"><a href="applications.html">Metals</a></li>
-					  <li class="breadcrumb-item active" aria-current="page"><a><b>Rod Wire</b></a></li>
+					  <li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
+					  <li class="breadcrumb-item"><a href="/pages-industries/metals.html">Metals</a></li>
+					  <li class="breadcrumb-item active" aria-current="page"><a><b>Cold Coil</b></a></li>
 					</ol>
 				  </nav>
 
-				<h2 class="fw-normal lh-1 main-heading">Rod Wire</h2>
+				<h2 class="fw-normal lh-1 main-heading">Cold Coil</h2>
 			</div>
 
 			<!-- divider -->
@@ -81,57 +80,45 @@
 			<hr><br>
 		</div>
 		
-		<div class="container content-row" id="specific-products-section">
-			<div class="row gy-4">
-				<div class="col-xl-6 mb-3">
-					<div class="card flex-md-row mb-4 box-shadow h-100">
-						<div class="card-body d-flex flex-column align-items-stretch">
-							<h3>
-								<a class="text-dark" href="product-details.html">Apex® Steel Strapping</a>
-							</h3>
-							<p class="card-text mb-auto">Apex and Apex Plus steel strapping are cold rolled, non-heat treated, low carbon strapping manufactured with superior edge conditioning with excellent coating and surface properties. </p>
-							<a href="#">See more</a>
+		<div class="container" id="products-section">
+			<div class="row">
+
+				<!-- product -->
+				<div class="col-12 col-lg-6 mb-4">
+					<div class="card mb-3 h-100">
+						<div class="row no-gutters h-100">
+							<div class="col-6">
+								<a href="/pages-industries/pages-metals/cold-coil/product-details.html"><img src="/images/home-page/banner.png" class="card-img" alt="..."></a>
+							</div>
+							<div class="col-6 h-100">
+								<div class="card-body">
+									<a href="/pages-industries/pages-metals/cold-coil/product-details.html"><h5 class="card-title">Cornerboard</h5></a>
+									<p class="card-text">Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.</p>
+								</div>
+							</div>
 						</div>
-						<img class="card-img-right flex-auto d-none d-md-block w-50" src="images/apex-steel-strapping.png" alt="Card image cap">
 					</div>
 				</div>
-				<div class="col-xl-6 mb-3">
-					<div class="card flex-md-row mb-4 box-shadow h-100">
-						<div class="card-body d-flex flex-column align-items-stretch">
-							<h3>
-								<a class="text-dark" href="#">Magnus®</a>
-							</h3>
-							<p class="card-text mb-auto">Magnus is a cold-rolled, heat-treated steel strapping that provides high tensile strength and shock resistance for the heaviest-duty applications.</p>
-							<a href="#">See more</a>
+	
+				<!-- product -->
+				<div class="col-12 col-lg-6 mb-4">
+					<div class="card mb-3 h-100">
+						<div class="row no-gutters h-100">
+							<div class="col-6">
+								<a href="/pages-industries/pages-metals/cold-coil/product-details.html"><img src="/images/home-page/banner.png" class="card-img" alt="..."></a>
+							</div>
+							<div class="col-6">
+								<div class="card-body">
+									<a href="/pages-industries/pages-metals/cold-coil/product-details.html"><h5 class="card-title">Formaboard</h5></a>
+									<p class="card-text">Super strong Formaboard™ edge protection is lightweight, and water/moisture resistant. Ideal for transporting refrigerated/frozen foods.</p>
+								</div>
+							</div>
 						</div>
-						<img class="card-img-right flex-auto d-none d-md-block w-50" src="images/apex-steel-strapping.png" alt="Card image cap">
 					</div>
 				</div>
-				<div class="col-xl-6 mb-3">
-					<div class="card flex-md-row mb-4 box-shadow h-100">
-						<div class="card-body d-flex flex-column align-items-stretch">
-							<h3>
-								<a class="text-dark" href="product-details.html">Apex® Steel Strapping</a>
-							</h3>
-							<p class="card-text mb-auto">Apex and Apex Plus steel strapping are cold rolled, non-heat treated, low carbon strapping manufactured with superior edge conditioning with excellent coating and surface properties. </p>
-							<a href="#">See more</a>
-						</div>
-						<img class="card-img-right flex-auto d-none d-md-block w-50" src="images/apex-steel-strapping.png" alt="Card image cap">
-					</div>
-				</div>
-				<div class="col-xl-6 mb-3">
-					<div class="card flex-md-row mb-4 box-shadow h-100">
-						<div class="card-body d-flex flex-column align-items-stretch">
-							<h3>
-								<a class="text-dark" href="#">Magnus®</a>
-							</h3>
-							<p class="card-text mb-auto">Magnus is a cold-rolled, heat-treated steel strapping that provides high tensile strength and shock resistance for the heaviest-duty applications.</p>
-							<a href="#">See more</a>
-						</div>
-						<img class="card-img-right flex-auto d-none d-md-block w-50" src="images/apex-steel-strapping.png" alt="Card image cap">
-					</div>
-				</div>
-		  </div>
+
+				
+			</div>
 		</div>
 
 		<br>
@@ -151,10 +138,10 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
     
-	<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <script src="../../assets/js/vendor/holder.min.js"></script>
+	<script>window.jQuery || document.write('<script src="//assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="//assets/js/vendor/popper.min.js"></script>
+    <script src="//dist/js/bootstrap.min.js"></script>
+    <script src="//assets/js/vendor/holder.min.js"></script>
     <script>
       Holder.addTheme('thumb', {
         bg: '#55595c',
