--- a/partials/navbar-two.html
+++ b/partials/navbar-two.html
@@ -30,7 +30,6 @@
 				<!-- navbar items -->
 				<div class="collapse navbar-collapse ml-auto justify-content-end" id="navbarSupportedContent">
 					<ul class="navbar-nav ml-auto mb-2 mb-lg-0" id="hide-navbar-items">
-
 						<!-- ******************************* COMPANY ************************************** -->
 
 						<li class="nav-item dropdown pr-3">
@@ -61,7 +60,7 @@
 
 						<!-- navbar item -->
 						<li class="nav-item dropdown pr-3">
-							<a class="nav-link dropdown-toggle" href="/industrial-solutions.html" id="navbarDropdown" role="button" aria-expanded="false"> Industrial Solutions </a>
+							<a class="nav-link dropdown-toggle" href="/industries.html" id="navbarDropdown" role="button" aria-expanded="false"> Industries </a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<!-- dropdown menu item -->
 								<li>
@@ -109,7 +108,7 @@
 
 						<!-- navbar item -->
 						<li class="nav-item dropdown pr-3">
-							<a class="nav-link dropdown-toggle" href="/packaging-solutions.html" id="navbarDropdown" role="button" aria-expanded="false">Packaging Solutions </a>
+							<a class="nav-link dropdown-toggle" href="/products.html" id="navbarDropdown" role="button" aria-expanded="false">Products </a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<!-- dropdown menu item -->
 								<li>
@@ -147,41 +146,46 @@
 
 						<!-- navbar item -->
 						<li class="nav-item dropdown pr-3">
-							<a class="nav-link dropdown-toggle" href="/printing-solutions.html" id="navbarDropdown" role="button" aria-expanded="false"> Printing Solutions </a>
+							<a class="nav-link dropdown-toggle" href="/solutions.html" id="navbarDropdown" role="button" aria-expanded="false"> Solutions </a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<!-- dropdown menu item -->
 								<li>
-									<a class="dropdown-item" href="about.html">Signode Integrated Printing Systems</a>
+									<a class="dropdown-item" href="about.html">Pack</a>
 								</li>
 
 								<!-- dropdown menu item -->
 								<li>
-									<a class="dropdown-item" href="brands.html">Package Coding Product Diagraph</a>
+									<a class="dropdown-item" href="brands.html">Bundle</a>
 								</li>
 
 								<!-- dropdown menu item -->
 								<li>
-									<a class="dropdown-item" href="careers.html">Package Coding Products Inc Jet</a>
+									<a class="dropdown-item" href="careers.html">Unitize</a>
 								</li>
 
 								<!-- dropdown menu item -->
 								<li>
-									<a class="dropdown-item" href="about.html">OEM Solutions</a>
+									<a class="dropdown-item" href="about.html">Warehouse</a>
 								</li>
 
 								<!-- dropdown menu item -->
 								<li>
-									<a class="dropdown-item" href="brands.html">Automated Labeling Systems Diagraph</a>
+									<a class="dropdown-item" href="brands.html">Transport</a>
 								</li>
 
 								<!-- dropdown menu item -->
 								<li>
-									<a class="dropdown-item" href="careers.html">Labeling and Tagging System IBC</a>
+									<a class="dropdown-item" href="careers.html">Printing Solutions</a>
 								</li>
 
 								<!-- dropdown menu item -->
 								<li>
-									<a class="dropdown-item" href="careers.html">Manual Solutions</a>
+									<a class="dropdown-item" href="careers.html">Services</a>
+								</li>
+
+								<!-- dropdown menu item -->
+								<li>
+									<a class="dropdown-item" href="careers.html">Automation</a>
 								</li>
 							</ul>
 						</li>
@@ -200,10 +204,9 @@
 					<!-- search bar: desktop version -->
 					<div id="search-box-desktop">
 						<form class="d-flex align-items-center" autocomplete="off">
-
 							<!-- expandable input box -->
 							<input id="search-input" type="text" placeholder="What are you looking for?" onfocus="navSearchFocus()" onblur="navSearchBlur()" />
-                            
+
 							<!-- search icon -->
 							<input id="search-submit" />
 						</form>
