--- a/templates/product-details-template.html
+++ b/templates/product-details-template.html
@@ -54,7 +54,7 @@
 				<!-- breadcrumb -->
 				  <nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
-					  <li class="breadcrumb-item"><a href="/industrial-solutions.html">Industrial Solutions</a></li>
+					  <li class="breadcrumb-item"><a href="/industries.html">Industrial Solutions</a></li>
 					  <li class="breadcrumb-item"><a href="/pages-solutions/lumber-and-panelboard.html">Lumber and Panelboard</a></li>
 					  <li class="breadcrumb-item"><a href="/pages-product-categories/angleboard.html">AngleBoard</a></li>
 					  <li class="breadcrumb-item active" aria-current="page"><a><b>AngleWrap</b></a></li>
