--- a/css/styles-product-categories-template.css
+++ b/css/styles-product-categories-template.css
@@ -66,29 +66,55 @@
 	font-size: 18px;
 }
 
-/************************************ APPLICATIONS *************************************/
+/************************************ HEADING AND DESCRIPTION *************************************/
 
 .description{
 	font-size: 17px;
 	color:rgb(83, 83, 83);
 }
 
-#applications-gallery .page-label{
+.page-label{
 	font-family: var(--ff-open-sans);
 }
 
-.application-button:hover{
+/************************************ SPECIFIC PRODUCTS *************************************/
+
+#products-section .card{
+	background-color: white;
+	border: none;
+	/* border: 1px solid #b9b9b9; */
 	box-shadow: 0 10px 20px 3px rgb(232, 232, 232) !important;
-	transition: box-shadow 0.35s;
 }
 
-.gallery-text {
-	font-family: var(--ff-open-sans);
+#products-section .card-body{
+	border: white;
+}
+
+/* product name */
+#products-section .card-title{
+	font-size: 25px;
+	font-weight: 600;
 	color: black;
-	font-size: 18px;
 }
 
-.gallery-text:hover{
+#products-section .card-title:hover{
 	color: var(--clr-signode-red);
+	cursor: pointer;
+}
+
+#products-section a:hover{
 	text-decoration: none;
+}
+
+/* product description */
+#products-section .card-text{
+	font-size: 15px;
+}
+
+#products-section img{
+	/* prevents image from stretching */
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+	border-radius: 3px 0px 0px 3px;
 }
