added services page

--- a/partials/navbar-two.html
+++ b/partials/navbar-two.html
@@ -112,33 +112,24 @@
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<!-- dropdown menu item -->
 								<li>
-									<a class="dropdown-item" href="about.html">Plastic Strapping Systems</a>
+									<a class="dropdown-item" href="/pages-products/plastic-strapping-systems/plastic-strapping-systems.html">Plastic Strapping Systems</a>
 								</li>
 
 								<!-- dropdown menu item -->
 								<li>
-									<a class="dropdown-item" href="brands.html">Steel Strapping Systems</a>
+									<a class="dropdown-item" href="/pages-products/steel-strapping-systems/steel-strapping-systems.html">Steel Strapping Systems</a>
 								</li>
 
 								<!-- dropdown menu item -->
 								<li>
-									<a class="dropdown-item" href="careers.html">Damage Prevention Products</a>
+									<a class="dropdown-item" href="/pages-products/damage-prevention-products/damage-prevention-products.html">Damage Prevention Products</a>
 								</li>
 
 								<!-- dropdown menu item -->
 								<li>
-									<a class="dropdown-item" href="/about.html">Stretch Equipment and Film</a>
+									<a class="dropdown-item" href="/pages-products/stretch-equipment-and-film/stretch-equipment-and-film.html">Stretch Equipment and Film</a>
 								</li>
 
-								<!-- dropdown menu item -->
-								<li>
-									<a class="dropdown-item" href="/partial-pages-solutions/services.html">Services</a>
-								</li>
-
-								<!-- dropdown menu item -->
-								<li>
-									<a class="dropdown-item" href="/automation.html">Automation</a>
-								</li>
 							</ul>
 						</li>
 
@@ -180,12 +171,12 @@
 
 								<!-- dropdown menu item -->
 								<li>
-									<a class="dropdown-item" href="careers.html">Services</a>
+									<a class="dropdown-item" href="/pages-solutions/services.html">Services</a>
 								</li>
 
 								<!-- dropdown menu item -->
 								<li>
-									<a class="dropdown-item" href="careers.html">Automation</a>
+									<a class="dropdown-item" href="/pages-solutions/automation.html">Automation</a>
 								</li>
 							</ul>
 						</li>
